fix: hide lines behind circles

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1386,6 +1386,7 @@ body:not(.admin) {
     border-radius: 50%;
     border: 5px solid $blue;
     transform: translate(-27px, 31.5px);
+    background-color: white;
   }
 }
 
